k8s/apps/nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
    labels:
        app: nginx-test
        app.kubernetes.io/name: nginx-test
    name: nginx-test
    namespace: default
spec:
    ingressClassName: cilium
    rules:
        - host: nginxtest.walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: nginx-test
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix
    tls:
        - hosts:
            - nginxtest.walnuts.dev
          secretName: nginx-test-tls

---
